조회 API 총정리 (#37)
* feat : access token 유효기간 60분으로 변경

* refactor : 특정 뉴스레터 누르면 연관된 정보들까지 전부 긁어오도록 리팩토링

* refactor : 조회수 무한 참조 현상 해결

* feat : 뉴스레터 페이지에서 오늘 가장 인기 있는 기사 정보들 조회 API (제목, 조회수 반환)

* refactor : 전체 기사 조회 refactor

* refactor : article 파일 구조 정리

* refactor : 사용자가 최근에 본 기사 3개 너무 많은 정보량 담는 점 수정하기

* feat : 숏폼 전체 조회, 상세 조회 API 구현

* feat : 그래프 html 상세 조회 API 구현

* refactor : 간단한거

* Update application.properties

* feat : UserManageService에 사용자가 존재하는지 확인